tests/baselines/reference/inferenceErrors.errors.txt
tests/cases/conformance/types/nonNull/inferenceErrors.ts(2,8): error TS2345: Argument of type '{ a: null; }' is not assignable to parameter of type '{ a: never; }'.
  Types of property 'a' are incompatible.
    Type 'null' is not assignable to type 'never'.
tests/cases/conformance/types/nonNull/inferenceErrors.ts(6,11): error TS2345: Argument of type 'null' is not assignable to parameter of type '5'.
tests/cases/conformance/types/nonNull/inferenceErrors.ts(9,8): error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/inferenceErrors.ts(10,8): error TS2345: Argument of type 'undefined' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/inferenceErrors.ts(11,14): error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/inferenceErrors.ts(12,19): error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/inferenceErrors.ts(13,15): error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/inferenceErrors.ts(16,8): error TS2345: Argument of type '{ x: number; y: string; }' is not assignable to parameter of type 'Record<"x" | "y", number>'.
  Types of property 'y' are incompatible.
    Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/types/nonNull/inferenceErrors.ts (8 errors) ====
    declare function infer3<T>(x: { a: T! }): T;
    infer3(null! as { a: null });
           ~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ a: null; }' is not assignable to parameter of type '{ a: never; }'.
!!! error TS2345:   Types of property 'a' are incompatible.
!!! error TS2345:     Type 'null' is not assignable to type 'never'.
    
    
    declare function infer4<T>(x: T, y: T!): void;
    infer4(5, null);
              ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type '5'.
    
    declare function infer5<T>(x: T!): T;
    infer5(null);
           ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
    infer5(undefined);
           ~~~~~~~~~
!!! error TS2345: Argument of type 'undefined' is not assignable to parameter of type 'never'.
    infer5<null>(null);
                 ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
    infer5<undefined>(null);
                      ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
    infer5<never>(null);
                  ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
    
    declare function infer6<T>(x: Record<'x'|'y', T!>): void;
    infer6({ x: 1, y: 'string' });
           ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: number; y: string; }' is not assignable to parameter of type 'Record<"x" | "y", number>'.
!!! error TS2345:   Types of property 'y' are incompatible.
!!! error TS2345:     Type 'string' is not assignable to type 'number'.
    